# clash-tray

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs
src-tauri/src/: commands.rs  country.rs  events.rs  lib.rs  main.rs  notify.rs  poll.rs  settings.rs  state.rs  tray.rs
src-tauri/src/clash/: client.rs  errors.rs  mod.rs  types.rs
src/lib/: api.ts  country.ts  format.ts  types.ts
src/lib/components/: ConnectionDot.svelte  CountryHeader.svelte  CurrentProxy.svelte  DelayBadge.svelte  NodeRow.svelte  ProxyGroup.svelte
src/lib/views/: Popup.svelte  Settings.svelte
src/routes/: +page.svelte
